--- a/Proyectos.html
+++ b/Proyectos.html
@@ -152,14 +152,14 @@
         </section>
         <div id="color-nav-1" class="redes container-fluid">
             <div class="mb-0 p-3">
-                <a class="btn btn-outline-light btn-floating m-1" href="wwww.youtube.com" role="button">
-                    <i class="fa-brands fa-youtube"></i></a>
-                <a class="btn btn-outline-light btn-floating m-1" href="wwww.twitter.com" role="button">
-                    <i class="fa-brands fa-twitter text-white"></i></a>
-                    <a class="btn btn-outline-light btn-floating m-1" href="wwww.facebook.com" role="button">
-                        <i  class="fa-brands fa-facebook"></i></a>
-                        <a class="btn btn-outline-light btn-floating m-1" href="wwww.instagram.com" role="button">
-                            <i class="fa-brands fa-instagram"></i></a>
+            <a class="btn btn-outline-light btn-floating m-1" href="https://www.youtube.com/" role="button">
+                <i class="fa-brands fa-youtube"></i></a>
+            <a class="btn btn-outline-light btn-floating m-1" href="https://twitter.com/home" role="button">
+                <i class="fa-brands fa-twitter text-white"></i></a>
+                <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/" role="button">
+                    <i  class="fa-brands fa-facebook"></i></a>
+                    <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/" role="button">
+                        <i class="fa-brands fa-instagram"></i></a>
             </div>
 
         </div>
